# smellcheck

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  action.yml  pyproject.toml  release-please-config.json
.claude-plugin/: marketplace.json
.cursor-plugin/: marketplace.json
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: bugfix.md  docs.md  feature.md
.github/workflows/: ci.yml  lint-commits.yml  pr-template.yml  release-please.yml
docs/: code-smells-guide.md  installation.md
plugins/python-refactoring/.claude-plugin/: plugin.json
plugins/python-refactoring/.cursor-plugin/: plugin.json
plugins/python-refactoring/rules/: python-refactoring.mdc
plugins/python-refactoring/skills/python-refactoring/: SKILL.md
plugins/python-refactoring/skills/python-refactoring/references/: idioms.md  metrics.md
plugins/python-refactoring/skills/python-refactoring/scripts/: detect_smells.py
scripts/: check-breaking-change-reminder.sh  check-commit-msg.sh  check-doc-alignment.py  check-docs-reminder.sh  check-merged-branch.sh  check-pr-description-reminder.sh  check-pr-template.sh  check-readme-links.py  check-vendor-sync.sh  vendor-smellcheck.sh
src/smellcheck/: __init__.py  __main__.py  detector.py
tests/: test_detector.py  test_regressions.py  test_version_parity.py
(+2 files in other folders)
