[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "smellcheck"
version = "0.2.2"
description = "Python code smell detector -- 82 refactoring patterns, 55 AST checks, zero dependencies"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Cheick Berthe" }]
keywords = ["code-smells", "refactoring", "ast", "static-analysis", "linter"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/cheickmec/smellcheck"
Repository = "https://github.com/cheickmec/smellcheck"
Issues = "https://github.com/cheickmec/smellcheck/issues"

[project.scripts]
smellcheck = "smellcheck.detector:main"

[tool.hatch.build.targets.wheel]
packages = ["src/smellcheck"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.pytest.ini_options]
testpaths = ["tests"]
